# AOS_Project

./: .gitignore  .install-protobuf-travis.sh  .travis.yml  CMakeLists.txt  README.md
bbque/: binding_manager.cc  rpc_messages.cc
bbque/app/: working_mode.cc
bbque/res/: resource_path.cc
include/: fifo.h  fifo_monitor.h  message_factory.h  print.h  response_factory.h  synchronized_queue.h  utils.h
include/bbque/: application_proxy.h  config.h.in
include/bbque/plugins/: rpc_channel.h
include/bbque/res/: resource_path.h
include/bbque/rtlib/: bbque_rpc.h
include/bbque/rtlib/rpc/: rpc_messages.h
include/bbque/rtlib/rpc/fifo/: rpc_fifo_client.h  rpc_fifo_server.h
include/bbque/rtlib/rpc/pb_fifo/: rpc_messages.proto  rpc_pb_fifo_client.h  rpc_pb_fifo_server.h  rpc_pb_message_factory.h
plugins/rpc/: CMakeLists.txt
plugins/rpc/pb_fifo/: CMakeLists.txt  fifo_plugin.cc  pb_fifo_rpc.cc  pb_fifo_rpc.h
plugins/schedpol/random/: random_schedpol.cc
proto/: rpc_messages.proto  rpc_messages_verbatim.proto  test_msg.proto
report/: template.tex
report/text/: coding.tex
rtlib/: CMakeLists.txt  Kconfig  bbque_rpc.cc  rpc_pb_fifo_client.cc  rpc_pb_message_factory.cc
src/: fifo.cc  fifo_monitor.cc  message_factory.cc  print.cc  response_factory.cc  utils.cc
tests/: application.cc  barbeque.cc  consumer.cc  fifo_consumer.cc  fifo_producer.cc  helloworld.cc  producer.cc  test.cc
